# terminusdb-grpc-labelstore

./: .gitignore  Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: _main.rs  lib.rs
proto/: Cargo.toml  build.rs  labels.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
