[package]
name = "terminusdb-grpc-labelstore-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminusdb-grpc-labelstore-proto = {path = "../proto"}
terminus-store = { git="http://github.com/terminusdb/terminusdb-store", rev="f916464afa496568c2d921aedf66e3eda800d3d6" }
tokio = { version = "1.24.2", features = ["full"] }
tonic = "0.8.3"
bytes = "1.3"
async-trait = "0.1"
