[package]
name = "terminusdb-grpc-labelstore-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminusdb-grpc-labelstore-proto = {path = "../proto"}
terminus-store = "0.20.1"
tokio = { version = "1.24.2", features = ["full"] }
tonic = "0.8.3"
bytes = "1.3"
async-trait = "0.1"
